# vendor

./: clean.sh  make.sh
freetype/: CMakeLists.txt  make_droid.sh  make_ios.sh  make_linux.sh  make_osx.sh  make_web.sh
freetype/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-cc.mk  unix-def.mk
freetype/objs/: apinames  autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  type1cid.lo  (+2 more)
freetype/objs/.libs/: libfreetype.lai  libfreetype.so.6.16.1
jpeg/: CMakeLists.txt  make_droid.sh  make_ios.sh  make_linux.sh
jpeg/src/: jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcparam.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdsample.c  jdtrans.c  jerror.c  jfdctflt.c  jfdctfst.c  jfdctint.c  jidctflt.c  jidctfst.c  jidctint.c  jmemmgr.c  (+4 more)
png/: CMakeLists.txt  make_ios.sh  make_osx.sh
png/src/: png.c  pngerror.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
zip/: CMakeLists.txt  make_ios.sh  make_web.sh
zip/include/zip/: zip.h
zip/src/: zipint.h
